--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,36 @@
-.qodo 
-node_modules/ 
+.qodo/
+# Node modules
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env
+.env.*
+
+# Output files
+dist/
+build/
+coverage/
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# IDEs
+.vscode/
+
+# Test output
+*.lcov
+
+# Misc
+*.tgz
