--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
 	"bugs": {
 		"url": "https://github.com/EnriqueSarmiento/stats-enrique-package/issues"
 	},
-	"homepage": "https://github.com/EnriqueSarmiento/stats-enrique-package#readme"
+	"homepage": "https://github.com/EnriqueSarmiento/stats-enrique-package#readme",
+	"dependencies": {
+		"canvas": "^3.1.0",
+		"chart.js": "^4.4.9",
+		"chartjs-node-canvas": "^5.0.0"
+	}
 }
