specified scome on pakage.json name field (username github)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "stats-enrique-package",
+	"name": "@EnriqueSarmiento/stats-enrique-package",
 	"version": "1.0.0",
 	"main": "estadisticas.js",
 	"scripts": {
